<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/hello_world" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_firstname"
        android:hint="First Name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_firstname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_lastname"
        android:hint="Last Name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_lastname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_email"
        android:hint="Email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_username"
        android:hint="User Name"
        android:padding= "10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_occupation"
        android:hint="Occupation"
        android:padding= "10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_occupation"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_description"
        android:hint="Description"
        android:padding= "10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date of Birth"
        android:layout_marginTop="10dp"
        android:id="@+id/button_dob" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/valid_dob"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:text="submit"
        android:id="@+id/button_submit"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author" />

</LinearLayout>
</ScrollView>