<resources>
    <string name="app_name">Conservative Marriage Dating App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tell us about yourself.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="author">Created by Benjamin Jenne on 4/24/2020</string>
    <string name="valid_dob">\u2713 18 years or older</string>
    <string name="invalid_dob">✗ Must be 18 years or older</string>
    <string name="enter_username">Please enter your username</string>
    <string name="letters_or_numbers">Please only enter letters or numbers</string>
    <string name="letters">Please only enter letters</string>
    <string name="enter_email">Please enter a valid email</string>
    <string name="enter_firstname">Please enter your first name</string>
    <string name="enter_lastname">Please enter your last name</string>
    <string name="enter_description">Please enter your description</string>
    <string name="profile">profile</string>
    <string name="matches">matches</string>
    <string name="settings">settings</string>
    <string name="example_match_name">Germanicus Julius Caesar</string>
    <string name="example_match_description">Roman General</string>
    <string name="like">Like</string>
    <string name="you_liked">You liked</string>
    <string name="min_age">Minimum Age</string>
    <string name="max_age">Maximum Age</string>
    <string name="range">Distance (Miles)</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="your_min_age">I am interested in people as young as </string>
    <string name="your_max_age">I am interested in people as old as </string>
    <string name="your_range">I am interested in people within </string>
    <string name="miles">miles</string>
    <string name="your_acount_is">Your account is currently set to </string>
    <string name="is_public">public</string>
    <string name="is_private">private</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="reminder_off">Your daily matches reminder is currently off</string>
    <string name="reminder_on">You will be reminded about your matches at </string>
    <string name="remind_me">Notify me about new matches at </string>
    <string name="pm">pm</string>
    <string name="am">am</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="network_provider_started_running">GPS started running</string>
    <string name="network_provider_update">GPS location updated</string>
    <string name="Location_Services_Disabled">Location Services Disabled</string>
    <string name="Enable_Location">Please enable location in settings.</string>
    <string name="OK">OK</string>
</resources>
